This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - fix offset calculation in rest api
          - Config Tool:
            - add authorization tab to contacts and contactgroups

2.26-2   Tue Dec 18 17:33:08 CET 2018
          - display external commands errors if possible
            - right now only naemon >= 1.0.9 does support this
          - Panorama:
            - fix panels not beeing updated in single window mode

2.26     Fri Dec  7 21:34:29 CET 2018
          - add admin role in cgi.cfg
          - add graph_proxy_enabled option to passthrough pnp and grafana from remote http sites
          - remove cluetip library for popup graphs
          - fix reload issue in firefox
          - fix escaping hostnames and service description in excel exports
          - fix command issues in rest api
          - Business Process:
            - fix timeouts

2.24-2   Tue Nov  6 16:18:50 CET 2018
          - add new (optional) roles
          - fix rest api issues
          - add cluster mode with fixed number of nodes
          - Panorama:
            - make icon unknown if filter does not return any objects

2.24     Fri Oct 26 18:40:37 CEST 2018
          - add rest api
            - see https://thruk.org/documentation/rest.html for details
          - support clustered setups
            - see https://thruk.org/documentation/cluster.html for details
          - add api keys
          - add command_enabled option
          - show and use alias for hosts, hostgroups and servicegroups search
          - removed cookie_auth_direct_agents option
          - action menus:
            - add support for submenus
            - add support for scripted js menus
          - Business Process:
            - only show business processes where the contact is allowed to see the generated service (#810)
          - Panorama:
            - fix playing recovery or host alert sounds
          - Cookie Auth: