@@ -9,5 +9,3 @@
         </options>
     </peer>
 </Component>
-
-graph_proxy_enabled = 1
