@@ -387,10 +387,13 @@ shown_inline_pnp = 1
 #  for graphios:   s/\s//gmx
 #graph_replace = s/[^\w\-]/_/gmx
 
-# the graph_proxy will proxy requests for pnp or grafana action_urls via the
+# the http_backend_reverse_proxy will proxy requests for pnp or grafana action_urls via the
 # http backend if possible. This only works for http backends and if cookie auth is enabled.
-# Set to 0 to disable.
-#graph_proxy_enabled = 1
+# Can be used to proxy thruk nodes (experimental).
+# Possible options:
+# disabled: 0
+# enabled:  1
+#http_backend_reverse_proxy = 1
 
 
 # show custom vars in host / service ext info.
